add components, fixed caret height bug

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -6,6 +6,7 @@
 
 // Core variables and mixins
 @import "variables.less";
+@import "font.less";
 @import "mixins.less";
 
 // Reset and dependencies
@@ -44,6 +45,13 @@
 @import "responsive-embed.less";
 @import "wells.less";
 @import "close.less";
+
+// Components
+@import "side-panel.less";
+@import "toolbar.less";
+@import "removables.less";
+@import "pieces-collection.less";
+@import "bubbles.less";
 
 // Components w/ JavaScript
 @import "modals.less";
