--- a/less/buttons.less
+++ b/less/buttons.less
@@ -138,10 +138,10 @@
 }
 .btn-sm {
   // line-height: ensure proper height of button next to small input
-  .button-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @btn-border-radius-small);
+  .button-size(@padding-small-vertical; @padding-small-horizontal; @buttons-font-size; @line-height-small; @btn-border-radius-small);
 }
 .btn-xs {
-  .button-size(@padding-xs-vertical; @padding-xs-horizontal; @font-size-small; @line-height-small; @btn-border-radius-small);
+  .button-size(@padding-xs-vertical; @padding-xs-horizontal; @buttons-font-size; @line-height-small; @btn-border-radius-small);
 }
 
 
