--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -9,10 +9,11 @@
   width: auto;
   height: auto;
   margin-left: 2px;
-  vertical-align: middle;
+  vertical-align: top;
 
   &::before {
     display: inline;
+    vertical-align: middle;
     content: "\e64b";
     font-family: "themify";
     font-style: normal;
