--- a/less/variables.less
+++ b/less/variables.less
@@ -207,6 +207,9 @@
 //** Placeholder text color
 @input-color-placeholder:        #999;
 
+//** Placeholder weight
+@input-placeholder-weight:       300;
+
 //** Default `.form-control` height
 // @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
 @input-height-base:              41px;
