--- a/less/mixins/vendor-prefixes.less
+++ b/less/mixins/vendor-prefixes.less
@@ -101,11 +101,18 @@
 .placeholder(@color: @input-color-placeholder) {
   // Firefox
   &::-moz-placeholder {
+    font-weight: @input-placeholder-weight;
     color: @color;
     opacity: 1; // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526
   }
-  &:-ms-input-placeholder { color: @color; } // Internet Explorer 10+
-  &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
+  &:-ms-input-placeholder {
+    color: @color;
+    font-weight: @input-placeholder-weight;
+  } // Internet Explorer 10+
+  &::-webkit-input-placeholder  {
+    color: @color;
+    font-weight: @input-placeholder-weight;
+  } // Safari and Chrome
 }
 
 // Transformations
