buttons and codemirror changes

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -52,6 +52,7 @@
 @import "removables.less";
 @import "pieces-collection.less";
 @import "bubbles.less";
+@import "codemirror.less";
 
 // Components w/ JavaScript
 @import "modals.less";
