--- a/less/codemirror.less
+++ b/less/codemirror.less
@@ -1,4 +1,5 @@
 .CodeMirror {
-  font-family: "Ubuntu Mono";
-  font-size: 14px;
+  font-family: @font-family-monospace;
+  font-size: 18px;
+  height: 100%;
 }
