--- a/less/variables.less
+++ b/less/variables.less
@@ -45,7 +45,7 @@
 @font-family-sans-serif:  "Open Sans", sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace:   Consolas, "Liberation Mono", Menlo, Courier, monospace;
+@font-family-monospace:   "Inconsolata", "Liberation Mono", Menlo, Courier, monospace;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          14px;
@@ -868,7 +868,7 @@
 //** Blockquote font size
 @blockquote-font-size:        (@font-size-base * 1.25);
 //** Blockquote border color
-@blockquote-border-color:     @gray-lighter;
+@blockquote-border-color:     @gray-light;
 //** Page header border color
 @page-header-border-color:    @gray-lighter;
 //** Width of horizontal description list titles
