--- a/less/buttons.less
+++ b/less/buttons.less
@@ -135,7 +135,7 @@
 
 // Make a button look and behave like a link
 .btn-icon {
-  color: @btn-default-color;
+  color: lighten(@btn-default-color, 10%);
   font-weight: normal;
   border-radius: 0;
 
