--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -30,6 +30,10 @@ body {
   line-height: @line-height-base;
   color: @text-color;
   background-color: @body-bg;
+
+  &.padded {
+    padding-top: @navbar-height;
+  }
 }
 
 // Reset fonts for relevant elements
