--- a/less/spacers.less
+++ b/less/spacers.less
@@ -38,3 +38,15 @@
 .pad-inside-top-medium {
   padding-top: 20px;
 }
+
+.pad-inside-small {
+  padding: 10px;
+}
+
+.pad-inside-medium {
+  padding: 20px;
+}
+
+.pad-inside-large {
+  padding: 40px;
+}
